name:                atomic
version:             0.5.0.0
synopsis:            Atomic is a framework that unifies client and server programming.
-- description:
homepage:            github.com/grumply/atomic
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag secure
      Description: enable secure websockets
      Default: False

Flag debugws
     Description: debug websocket messages
     Default: False

Flag devel
     Description: development debugging
     Default: False

Flag passive
     Description: passive event listeners by default; requires polyfill for IE/Edge
     Default: False

library
  ghc-options: -fconstraint-solver-iterations=0

  if flag(debugws)
    cpp-options: -DGHCJS_BROWSER -DDEBUGWS

  if flag(devel)
    cpp-options: -DGHCJS_BROWSER -DDEVEL

  if flag(passive)
    cpp-options: -DGHCJS_BROWSER -DPASSIVE_LISTENERS

  if (impl(ghcjs))
    exposed-modules:    Atomic
                      , Module
                      , Component
                      , Service
                      , App
                      , Data.JSON
                      , Data.Txt
                      , Data.Millis
                      , Data.Micros
                      , Atomic.API
                      , Atomic.API.Implementation
                      , Atomic.API.Interface
                      , Atomic.API.ProxyList
                      , Atomic.Component
                      , Atomic.Attribute
                      , Atomic.CSS
                      , Atomic.CSS.Helpers
                      , Atomic.CSS.Render
                      , Atomic.CSS.Styles
                      , Atomic.Module
                      , Atomic.Cond
                      , Atomic.Debounce
                      , Atomic.Default
                      , Atomic.Dict
                      , Atomic.Ease
                      , Atomic.Endpoint
                      , Atomic.FromBS
                      , Atomic.FromTxt
                      , Atomic.Grid
                      , Atomic.HTML
                      , Atomic.Identify
                      , Atomic.Key
                      , Atomic.Lazy
                      , Atomic.Limit
                      , Atomic.Memo
                      , Atomic.Message
                      , Atomic.Normalize
                      , Atomic.Dispatch
                      , Atomic.Observable
                      , Atomic.Request
                      , Atomic.Route
                      , Atomic.Router
                      , Atomic.Service
                      , Atomic.Services
                      , Atomic.Services.Cookie
                      , Atomic.Services.Frame
                      , Atomic.Services.LocalStorage
                      , Atomic.Services.Mouse
                      , Atomic.Services.SessionStorage
                      , Atomic.Services.Tween
                      , Atomic.Services.Window
                      , Atomic.Signals
                      , Atomic.Throttle
                      , Atomic.ToBS
                      , Atomic.ToTxt
                      , Atomic.Try
                      , Atomic.TypeRep
                      , Atomic.UnsafeEq
                      , Atomic.Vault
                      , Atomic.WebSocket
    cpp-options: -DGHCJS_BROWSER
    build-depends:      base >=4.8
                      , ef-core >= 2.0
                      , ef-base >= 2.0
                      , bytestring
                      , text
                      , aeson >= 0.9
                      , hashable
                      , ghcjs-base
                      , ghcjs-dom == 0.3.*
                      , unordered-containers
                      , template-haskell
                      , ghc-prim
                      , void
                      , transformers
                      -- , lens
                      , containers

  else
    exposed-modules:    Atomic
                      , Module
                      , Component
                      , Service
                      , App
                      , Server
                      , Connection
                      , Data.JSON
                      , Data.Txt
                      , Data.Millis
                      , Data.Micros
                      , Atomic.API
                      , Atomic.API.Implementation
                      , Atomic.API.Interface
                      , Atomic.API.ProxyList
                      , Atomic.Component
                      , Atomic.Attribute
                      , Atomic.CSS
                      , Atomic.CSS.Helpers
                      , Atomic.CSS.Render
                      , Atomic.CSS.Styles
                      , Atomic.Module
                      , Atomic.Cond
                      , Atomic.Debounce
                      , Atomic.Default
                      , Atomic.Dict
                      , Atomic.Ease
                      , Atomic.Endpoint
                      , Atomic.FromBS
                      , Atomic.FromTxt
                      , Atomic.Grid
                      , Atomic.HTML
                      , Atomic.Identify
                      , Atomic.Key
                      , Atomic.Lazy
                      , Atomic.Limit
                      , Atomic.Memo
                      , Atomic.Message
                      , Atomic.Normalize
                      , Atomic.Dispatch
                      , Atomic.Observable
                      , Atomic.Request
                      , Atomic.Route
                      , Atomic.Router
                      , Atomic.Service
                      , Atomic.Services
                      , Atomic.Services.Cookie
                      , Atomic.Services.Frame
                      , Atomic.Services.LocalStorage
                      , Atomic.Services.Mouse
                      , Atomic.Services.SessionStorage
                      , Atomic.Services.Tween
                      , Atomic.Services.Window
                      , Atomic.Signals
                      , Atomic.Throttle
                      , Atomic.ToBS
                      , Atomic.ToTxt
                      , Atomic.Try
                      , Atomic.TypeRep
                      , Atomic.UnsafeEq
                      , Atomic.Vault
                      , Atomic.WebSocket
    cpp-options: -DGHCJS_BROWSER
    if flag(secure)
      cpp-options:    -DSECURE
      build-depends:    base >=4.8
                      , ef-core >= 2.0
                      , ef-base >= 2.0
                      , websockets >= 0.9.6.1 && < 0.11
                      , network >= 2.6.2.1 && < 2.7
                      , bytestring >= 0.10.6 && < 0.11
                      , text
                      , HsOpenSSL >= 0.11.1.1 && < 0.12
                      , io-streams >= 1.3.5 && < 1.4
                      , openssl-streams >= 1.2 && < 1.3
                      , bytestring >= 0.10 && < 0.11
                      , containers
                      , unordered-containers
                      , time
                      , random
                      , ghc-prim
                      , hashable
                      , aeson >= 0.9
                      , void
                      , template-haskell
                      , transformers
                      -- , lens
                      , vector
    else
      build-depends:    base >=4.8
                      , ef-core >= 2.0
                      , ef-base >= 2.0
                      , websockets >= 0.9.6.1 && < 0.11
                      , network >= 2.6.2.1 && < 2.7
                      , bytestring >= 0.10.6 && < 0.11
                      , text
                      , io-streams >= 1.3.5 && < 1.4
                      , bytestring >= 0.10 && < 0.11
                      , containers
                      , unordered-containers
                      , time
                      , random
                      , ghc-prim
                      , hashable
                      , aeson >= 0.9
                      , void
                      , template-haskell
                      , transformers
                      -- , lens
                      , vector

  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveAnyClass
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeOperators

  hs-source-dirs:      src

  default-language:    Haskell2010
