name:                atomic
version:             0.6.0.0
synopsis:            The atomic web framework.
homepage:            github.com/grumply/atomic
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      App
    , CSS
    , HTML
    , Module
    , Router
    , SVG
    , Service
    , Txt
    , View
  other-modules:
      Atomic

  build-depends:
      base >=4.8
    , ef >= 3.0
    , ef-base >= 3.0
    , atomic-base
    , atomic-types
    , atomic-app
    , atomic-attributes
    , atomic-css
    , atomic-dom
    , atomic-html
    , atomic-module
    , atomic-router
    , atomic-service
    , atomic-signals
    , atomic-svg
    , atomic-websocket
    , template-haskell

  if (impl(ghcjs))
    cpp-options: -DGHCJS_BROWSER
  else
    build-depends:
        atomic-server
    exposed-modules:
        Server
      , Connection

  hs-source-dirs:      src
  default-language:    Haskell2010
