name:                nuclear
version:             3.0.0.0
synopsis:            Nuclear is a framework that unifies client and server programming.
-- description:
homepage:            ef-lang.org/nuclear
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag secure
      Description: enable secure websockets
      Default: False

Flag debugws
     Description: debug websocket messages
     Default: False

library
  if flag(debugws)
    cpp-options:    -DDEBUGWS

  if (impl(ghcjs))
    exposed-modules:    Nuclear
                      , Atom
                      , Component
                      , Data.JSText
                      , Data.JSTime
                      , Data.MicroTime
                      , Fusion
                      , Fusion.JS
                      , Nuclear.API
                      , Nuclear.API.Implementation
                      , Nuclear.API.Interface
                      , Nuclear.API.ProxyList
                      , Nuclear.Atom
                      , Nuclear.Attribute
                      , Nuclear.CSS
                      , Nuclear.CSS.Helpers
                      , Nuclear.CSS.Render
                      , Nuclear.CSS.Styles
                      , Nuclear.Component
                      , Nuclear.Cond
                      , Nuclear.Debounce
                      , Nuclear.Default
                      , Nuclear.Ease
                      , Nuclear.Endpoint
                      , Nuclear.FromBS
                      , Nuclear.FromText
                      , Nuclear.Indexed
                      , Nuclear.Key
                      , Nuclear.Lazy
                      , Nuclear.Limit
                      , Nuclear.Memo
                      , Nuclear.Message
                      , Nuclear.Normalize
                      , Nuclear.Nuclear
                      , Nuclear.Observable
                      , Nuclear.Render
                      , Nuclear.Request
                      , Nuclear.Revent
                      , Nuclear.Route
                      , Nuclear.Router
                      , Nuclear.Service
                      , Nuclear.Services
                      , Nuclear.Services.Cookie
                      , Nuclear.Services.Frame
                      , Nuclear.Services.LocalStorage
                      , Nuclear.Services.Mouse
                      , Nuclear.Services.SessionStorage
                      , Nuclear.Services.Tween
                      , Nuclear.Services.Window
                      , Nuclear.Signals
                      , Nuclear.Strict
                      , Nuclear.Throttle
                      , Nuclear.ToBS
                      , Nuclear.ToText
                      , Nuclear.Try
                      , Nuclear.TypeRep
                      , Nuclear.UnsafeEq
                      , Nuclear.Vault
                      , Nuclear.WebSocket
                      , Nuclear.With
                      , Service
    build-depends:      base >=4.8
                      , ef-core >= 2.0
                      , ef-base >= 2.0
                      , bytestring
                      , text
                      , aeson >= 0.9
                      , hashable
                      , ghcjs-base
                      , ghcjs-dom == 0.2.3.1
                      , unordered-containers
                      , template-haskell
                      , ghc-prim
                      , void

  else
    exposed-modules:    Nuclear
                      , Atom
                      , Client
                      , Component
                      , Data.JSText
                      , Data.JSTime
                      , Data.MicroTime
                      , Fission
                      , Fission.Client
                      , Nuclear.API
                      , Nuclear.API.Implementation
                      , Nuclear.API.Interface
                      , Nuclear.API.ProxyList
                      , Nuclear.Atom
                      , Nuclear.Attribute
                      , Nuclear.CSS
                      , Nuclear.CSS.Helpers
                      , Nuclear.CSS.Render
                      , Nuclear.CSS.Styles
                      , Nuclear.Component
                      , Nuclear.Cond
                      , Nuclear.Debounce
                      , Nuclear.Default
                      , Nuclear.Ease
                      , Nuclear.Endpoint
                      , Nuclear.FromBS
                      , Nuclear.FromText
                      , Nuclear.Indexed
                      , Nuclear.Key
                      , Nuclear.Lazy
                      , Nuclear.Limit
                      , Nuclear.Memo
                      , Nuclear.Message
                      , Nuclear.Normalize
                      , Nuclear.Nuclear
                      , Nuclear.Observable
                      , Nuclear.Render
                      , Nuclear.Request
                      , Nuclear.Revent
                      , Nuclear.Route
                      , Nuclear.Router
                      , Nuclear.Service
                      , Nuclear.Services
                      , Nuclear.Services.Cookie
                      , Nuclear.Services.Frame
                      , Nuclear.Services.LocalStorage
                      , Nuclear.Services.Mouse
                      , Nuclear.Services.SessionStorage
                      , Nuclear.Services.Tween
                      , Nuclear.Services.Window
                      , Nuclear.Signals
                      , Nuclear.Strict
                      , Nuclear.Throttle
                      , Nuclear.ToBS
                      , Nuclear.ToText
                      , Nuclear.Try
                      , Nuclear.TypeRep
                      , Nuclear.UnsafeEq
                      , Nuclear.Vault
                      , Nuclear.WebSocket
                      , Nuclear.With
                      , Service
                      , User
    if flag(secure)
      cpp-options:    -DSECURE
      build-depends:    base >=4.8
                      , ef-core >= 2.0
                      , ef-base >= 2.0
                      , websockets >= 0.9.6.1 && < 0.10
                      , network >= 2.6.2.1 && < 2.7
                      , bytestring >= 0.10.6 && < 0.11
                      , text
                      , HsOpenSSL >= 0.11.1.1 && < 0.12
                      , io-streams >= 1.3.5 && < 1.4
                      , openssl-streams >= 1.2 && < 1.3
                      , bytestring >= 0.10 && < 0.11
                      , containers
                      , unordered-containers
                      , time
                      , random
                      , ghc-prim
                      , hashable
                      , aeson >= 0.9
                      , void
                      , template-haskell
    else 
      build-depends:    base >=4.8
                      , ef-core >= 2.0
                      , ef-base >= 2.0
                      , websockets >= 0.9.6.1 && < 0.10
                      , network >= 2.6.2.1 && < 2.7
                      , bytestring >= 0.10.6 && < 0.11
                      , text
                      , io-streams >= 1.3.5 && < 1.4
                      , bytestring >= 0.10 && < 0.11
                      , containers
                      , unordered-containers
                      , time
                      , random
                      , ghc-prim
                      , hashable
                      , aeson >= 0.9
                      , void
                      , template-haskell

  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveAnyClass
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeOperators

  hs-source-dirs:      src

  default-language:    Haskell2010
