name:                pure
version:             0.8.0.0
homepage:            purehs.org/doc/pure
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure.git

library
  build-depends:
    base,
    pure-core,
    pure-default,
    pure-dom,
    pure-events,
    pure-html,
    pure-lifted,
    pure-styles,
    pure-theme,
    pure-time,
    pure-txt

  hs-source-dirs: src

  exposed-modules:
    Pure

  default-language: Haskell2010
