cabal-version:       2.4
name:                dev
version:             0.1.0.0

executable dev
  hs-source-dirs: src

  main-is: Main.hs

  build-depends:
    base

  if !(impl(ghcjs))
    build-depends:
        Glob
      , containers
      , directory
      , filepath
      , fsnotify
      , process
      , bytestring
      , optparse-applicative
      , wai
      , wai-app-static
      , wai-extra
      , warp
      , warp-tls
      , unix

  ghc-options: -O -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010
