cabal-version:       2.4
name:                backend
version:             0.1.0.0

executable backend
  hs-source-dirs: src

  main-is: Main.hs
  
  build-depends:
    base,
    pure,
    pure-convoker,
    pure-magician,
    shared,
    
  if !(impl(ghcjs))
    build-depends:
      pandoc
  
  ghc-options: -O -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010