cabal-version:       2.4
name:                backend
version:             0.1.0.0

executable backend
  hs-source-dirs: src

  main-is: Main.hs

  other-modules:
  
  build-depends:
    base,
    pure,
    pure-auth,
    pure-media-library,
    shared,
    
  if !(impl(ghcjs))
    build-depends:
      pandoc
  
  ghc-options: -O -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010
  
  default-extensions:
    BlockArguments
    TypeApplications
    DerivingVia
    DerivingStrategies
    DeriveAnyClass
    DeriveGeneric
    RecordWildCards
    ConstraintKinds
    RankNTypes
    FlexibleContexts 
    ScopedTypeVariables
    FlexibleInstances
    OverloadedStrings
    PartialTypeSignatures
    LambdaCase
    ViewPatterns
    RoleAnnotations
    DataKinds
    KindSignatures
    PolyKinds
    NamedFieldPuns
    PostfixOperators
    DuplicateRecordFields
    BangPatterns
    ParallelListComp
    TypeOperators
    TypeFamilies
