cabal-version:       2.4
name:                frontend
version:             0.1.0.0

executable frontend
  hs-source-dirs: src

  main-is: Main.hs
  
  other-modules:
    Admin
    Listing

  build-depends:
    base,
    async,
    pure,
    pure-media-library,
    pure-convoker,
    pure-magician,
    pure-auth,
    shared
  
  if impl(ghcjs)
    ghc-options: -dedupe -DGHCJS_BROWSER -DGHCJS_GC_INTERVAL=30000000

  default-language: Haskell2010

  default-extensions:
    BlockArguments
    TypeApplications
    DerivingVia
    DerivingStrategies
    DeriveAnyClass
    DeriveGeneric
    RecordWildCards
    ConstraintKinds
    RankNTypes
    FlexibleContexts 
    ScopedTypeVariables
    FlexibleInstances
    OverloadedStrings
    PartialTypeSignatures
    LambdaCase
    ViewPatterns
    RoleAnnotations
    DataKinds
    KindSignatures
    PolyKinds
    NamedFieldPuns
    PostfixOperators
    DuplicateRecordFields
    BangPatterns
    ParallelListComp
    TypeOperators
    TypeFamilies