cabal-version:       2.4
name:                frontend
version:             0.1.0.0

executable frontend
  hs-source-dirs: src

  main-is: Main.hs
  
  other-modules:
    Admin
    Listing

  build-depends:
    base,
    pure,
    pure-media-library,
    shared,
    containers,
    lens,
    vector,
  
  if impl(ghcjs)
    ghc-options: -dedupe -DGHCJS_BROWSER -DGHCJS_GC_INTERVAL=5000000 -threaded

  default-language: Haskell2010

  default-extensions:
    BlockArguments
    TypeApplications
    DerivingVia
    DerivingStrategies
    DeriveAnyClass
    DeriveGeneric
    RecordWildCards
    ConstraintKinds
    RankNTypes
    FlexibleContexts 
    ScopedTypeVariables
    FlexibleInstances
    OverloadedStrings
    PartialTypeSignatures
    LambdaCase
    ViewPatterns
    RoleAnnotations
    DataKinds
    KindSignatures
    PolyKinds
    NamedFieldPuns
    PostfixOperators
    DuplicateRecordFields
    BangPatterns
    ParallelListComp
    TypeOperators
    TypeFamilies