cabal-version:       2.4
name:                shared
version:             0.1.0.0

library

  hs-source-dirs: src

  exposed-modules:
    Shared

  build-depends:
    base,
    pure-magician

  default-language: Haskell2010

  default-extensions:
    BlockArguments
    TypeApplications
    DerivingVia
    DerivingStrategies
    DeriveAnyClass
    DeriveGeneric
    RecordWildCards
    ConstraintKinds
    RankNTypes
    FlexibleContexts 
    ScopedTypeVariables
    FlexibleInstances
    OverloadedStrings
    PartialTypeSignatures
    LambdaCase
    ViewPatterns
    RoleAnnotations
    DataKinds
    KindSignatures
    PolyKinds
    NamedFieldPuns
    PostfixOperators
    DuplicateRecordFields
    BangPatterns
    ParallelListComp
    TypeOperators
    TypeFamilies
    UndecidableInstances