cabal-version:       2.4
name:                pure-auth
version:             0.8.0.0

library
  exposed-modules:
      Pure.Auth
    , Pure.Auth.API
    , Pure.Auth.Data
    , Pure.Auth.Data.Email
    , Pure.Auth.Data.Hash
    , Pure.Auth.Data.Key
    , Pure.Auth.Data.Password
    , Pure.Auth.Data.Token
    , Pure.Auth.Data.Username
    , Pure.Auth.Access

  build-depends:
    base,
    pure,
    hashable

  if !(impl(ghcjs))
    build-depends:
      bytestring,
      crypto-api, 
      pwstore-fast,
      iproute

    exposed-modules:
        Pure.Auth.GHC
      , Pure.Auth.GHC.API
      , Pure.Auth.GHC.Auth
      , Pure.Auth.GHC.Crypto


  hs-source-dirs:      src
  default-language:    Haskell2010
