cabal-version:       2.4
name:                pure-auth
version:             0.8.0.0

library
  exposed-modules:
      Pure.Auth
    , Pure.Auth.Auth
    , Pure.Auth.API
    , Pure.Auth.Data
    , Pure.Auth.Access

  build-depends:
    base,
    pure,
    bytestring,
    hashable

  if !(impl(ghcjs))
    build-depends:
      directory,
      filepath,
      cryptonite,
      pwstore-fast,
      connection,
      aeson,
      memory,
      base64-bytestring

    exposed-modules:
        Pure.Auth.GHC
      , Pure.Auth.GHC.API
      , Pure.Auth.GHC.Auth
      , Pure.Auth.GHC.Crypto


  hs-source-dirs:      src
  default-language:    Haskell2010
